# Calculater

./: CMakeLists.txt  README.md  calculater.cpp  calculater2.cpp  out.cpp  outputf.h
